<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_content_padding"
        android:layout_marginEnd="@dimen/dialog_content_padding"
        android:layout_marginStart="@dimen/dialog_content_padding"
        android:layout_marginBottom="@dimen/dialog_content_padding_bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_dialog_title"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/scan_dialog_question"
            android:textColor="@color/dark_grey"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_actions_height"
        android:layout_marginEnd="@dimen/dialog_actions_padding_right"
        android:layout_marginBottom="@dimen/dialog_actions_padding_bottom">
        <Button
            android:id="@+id/dialog_wifi_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/scan_dialog_action_positive"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            />
        <Button
            android:id="@+id/dialog_wifi_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/dialog_wifi_ok"
            android:text="@string/scan_dialog_action_negative"
            android:textColor="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>