<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/tile_height_3row">
    <TextView
        android:id="@+id/private_field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/tile_padding_top_3row"
        android:layout_marginLeft="@dimen/tile_padding_side"
        android:layout_marginRight="@dimen/tile_padding_side"
        android:text="@string/debug_placeholder"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/private_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/private_field_name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/tile_padding_side"
        android:layout_marginRight="@dimen/tile_padding_side"
        android:text="@string/label_password"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/private_field_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/private_field_name"
        android:layout_toRightOf="@id/private_label_password"
        android:layout_marginLeft="@dimen/tile_padding_small"
        android:layout_marginRight="@dimen/tile_padding_side"
        android:text="@string/debug_placeholder"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/private_label_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tile_padding_side"
        android:layout_marginRight="@dimen/tile_padding_side"
        android:layout_marginBottom="@dimen/tile_padding_bottom"
        android:layout_below="@id/private_label_password"
        android:text="@string/label_updated"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/private_field_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/tile_padding_side"
        android:layout_marginBottom="@dimen/tile_padding_bottom"
        android:layout_alignLeft="@id/edit_field_password"
        android:layout_below="@id/private_label_password"
        android:layout_toRightOf="@id/private_label_updated"
        android:text="@string/label_updated"
        android:textSize="14sp"/>

</RelativeLayout>