<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/tile_padding_xlarge"
    android:layout_marginLeft="@dimen/tile_padding_large"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/profile_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_email"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:labelFor="@+id/profile_field_email"
            android:text="@string/profile_email"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/profile_field_email"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:enabled="false"
            android:inputType="textEmailAddress"
            android:text="PLACEHOLDER"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile_layout_password_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout_email"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_password_current"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:labelFor="@+id/profile_field_password_current"
            android:text="@string/profile_password"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/profile_field_password_current"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:enabled="false"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile_layout_repeat1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout_password_current"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:visibility="gone"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_repeat1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:labelFor="@+id/profile_field_repeat1"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/profile_field_repeat1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:enabled="false"
            android:hint="@string/profile_repeat1_hint"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile_layout_repeat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout_repeat1"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:visibility="gone"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_repeat2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:labelFor="@+id/profile_field_repeat2"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/profile_field_repeat2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:enabled="false"
            android:hint="@string/profile_repeat2_hint"
            android:inputType="textPassword"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile_layout_counts_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout_repeat2"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/tile_padding_xlarge"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_count_private"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:textColor="@color/dark_grey"
            android:text="@string/profile_count_private"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/profile_field_count_private"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:textColor="@color/dark_grey"
            android:text="666"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile_layout_counts_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_layout_counts_private"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/tile_padding_xxxlarge"
        android:weightSum="1">
        <TextView
            android:id="@+id/profile_label_count_public"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:textColor="@color/dark_grey"
            android:text="@string/profile_count_public"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/profile_field_count_public"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:textColor="@color/dark_grey"
            android:text="666"
            android:textSize="16sp"/>
    </LinearLayout>

    <com.shamanland.fab.FloatingActionButton
        android:id="@+id/profile_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        app:floatingActionButtonColor="@drawable/floating_button"
        android:src="@drawable/ic_create"
        />
</RelativeLayout>